--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,7 @@
   },
   "plugins": ["react"],
   "rules": {
-    "react/react-in-jsx-scope": "off",
-    "no-unused-vars": "off"
+    "react/react-in-jsx-scope": "off"
+    //"no-unused-vars": "off"
   }
 }
