--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,25 @@
 {
-    "presets": ["next/babel"],
-    "plugins": [["styled-components", {"ssr":true }]]
+  "presets": ["next/babel"],
+  "plugins": [
+    [
+      "styled-components",
+      {
+        "ssr": true,
+        "displayName": true
+      }
+    ]
+  ],
+  "env": {
+    "test": {
+      "plugins": [
+        [
+          "styled-components",
+          {
+            "ssr": false,
+            "displayName": false
+          }
+        ]
+      ]
+    }
+  }
 }
