--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,8 @@
   },
   "plugins": ["react"],
   "rules": {
-    "react/react-in-jsx-scope": "off"
-    //"no-unused-vars": "off"
+    "react/react-in-jsx-scope": "off",
+    "no-unused-vars": "off",
+    "no-undef": "off"
   }
 }
